Adicion edad y remocion codigos innecesarios datos

--- a/pruebas_saber_exploracion_datos.ipynb
+++ b/pruebas_saber_exploracion_datos.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "1bfb8e6e-28f0-4af4-ab7e-017cdca4edd6",
    "metadata": {},
    "outputs": [
@@ -18,40 +18,82 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting sodapy\n",
-      "  Downloading sodapy-2.2.0-py2.py3-none-any.whl.metadata (15 kB)\n",
+      "Requirement already satisfied: sodapy in c:\\users\\naran\\appdata\\local\\anaconda3\\lib\\site-packages (2.2.0)\n",
       "Requirement already satisfied: requests>=2.28.1 in c:\\users\\naran\\appdata\\local\\anaconda3\\lib\\site-packages (from sodapy) (2.32.3)\n",
       "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\naran\\appdata\\local\\anaconda3\\lib\\site-packages (from requests>=2.28.1->sodapy) (3.3.2)\n",
       "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\naran\\appdata\\local\\anaconda3\\lib\\site-packages (from requests>=2.28.1->sodapy) (3.7)\n",
       "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\naran\\appdata\\local\\anaconda3\\lib\\site-packages (from requests>=2.28.1->sodapy) (2.3.0)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\naran\\appdata\\local\\anaconda3\\lib\\site-packages (from requests>=2.28.1->sodapy) (2025.4.26)\n",
-      "Downloading sodapy-2.2.0-py2.py3-none-any.whl (15 kB)\n",
-      "Installing collected packages: sodapy\n",
-      "Successfully installed sodapy-2.2.0\n"
+      "Collecting missingno\n",
+      "  Downloading missingno-0.5.2-py3-none-any.whl.metadata (639 bytes)\n",
+      "Requirement already satisfied: numpy in c:\\users\\naran\\appdata\\local\\anaconda3\\lib\\site-packages (from missingno) (2.1.3)\n",
+      "Requirement already satisfied: matplotlib in c:\\users\\naran\\appdata\\local\\anaconda3\\lib\\site-packages (from missingno) (3.10.0)\n",
+      "Requirement already satisfied: scipy in c:\\users\\naran\\appdata\\local\\anaconda3\\lib\\site-packages (from missingno) (1.15.3)\n",
+      "Requirement already satisfied: seaborn in c:\\users\\naran\\appdata\\local\\anaconda3\\lib\\site-packages (from missingno) (0.13.2)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\naran\\appdata\\local\\anaconda3\\lib\\site-packages (from matplotlib->missingno) (1.3.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\naran\\appdata\\local\\anaconda3\\lib\\site-packages (from matplotlib->missingno) (0.11.0)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\naran\\appdata\\local\\anaconda3\\lib\\site-packages (from matplotlib->missingno) (4.55.3)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in c:\\users\\naran\\appdata\\local\\anaconda3\\lib\\site-packages (from matplotlib->missingno) (1.4.8)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\naran\\appdata\\local\\anaconda3\\lib\\site-packages (from matplotlib->missingno) (24.2)\n",
+      "Requirement already satisfied: pillow>=8 in c:\\users\\naran\\appdata\\local\\anaconda3\\lib\\site-packages (from matplotlib->missingno) (11.1.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\naran\\appdata\\local\\anaconda3\\lib\\site-packages (from matplotlib->missingno) (3.2.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\naran\\appdata\\local\\anaconda3\\lib\\site-packages (from matplotlib->missingno) (2.9.0.post0)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\naran\\appdata\\local\\anaconda3\\lib\\site-packages (from python-dateutil>=2.7->matplotlib->missingno) (1.17.0)\n",
+      "Requirement already satisfied: pandas>=1.2 in c:\\users\\naran\\appdata\\local\\anaconda3\\lib\\site-packages (from seaborn->missingno) (2.2.3)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\naran\\appdata\\local\\anaconda3\\lib\\site-packages (from pandas>=1.2->seaborn->missingno) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\naran\\appdata\\local\\anaconda3\\lib\\site-packages (from pandas>=1.2->seaborn->missingno) (2025.2)\n",
+      "Downloading missingno-0.5.2-py3-none-any.whl (8.7 kB)\n",
+      "Installing collected packages: missingno\n",
+      "Successfully installed missingno-0.5.2\n"
      ]
     }
    ],
    "source": [
-    "!pip install sodapy"
+    "!pip install sodapy\n",
+    "!pip install missingno"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "e813b798-52f8-48e1-947a-a9f6d47fbc75",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from datetime import datetime\n",
-    "import numpy as np\n",
-    "from sodapy import Socrata\n",
-    "import matplotlib.pyplot as plt\n",
+    "# Para la importación de los datos desde Socrata\n",
+    "from sodapy     import Socrata\n",
     "\n",
-    "import seaborn as sns\n",
+    "from datetime   import datetime\n",
+    "import pandas   as pd\n",
+    "import numpy    as np\n",
+    "import warnings\n",
+    "import scipy.stats as stats\n",
+    "import math\n",
+    "\n",
+    "#Para gráficos y mapas de calor\n",
+    "import seaborn            as sb\n",
+    "import matplotlib.pyplot  as plt\n",
+    "import plotly.graph_objs  as go\n",
+    "\n",
+    "#Para la imputación de los datos\n",
+    "from sklearn.impute     import SimpleImputer\n",
+    "from sklearn.compose    import ColumnTransformer\n",
+    "import missingno        as msno\n",
+    "\n",
+    "#Para el pre-procesamiento de los datos\n",
+    "from sklearn.preprocessing      import LabelEncoder, OrdinalEncoder, OneHotEncoder\n",
+    "from sklearn.feature_selection  import SelectKBest, chi2\n",
     "\n",
     "\n",
+    "#Para generar los modelos\n",
+    "from sklearn.model_selection    import train_test_split\n",
+    "from sklearn.metrics            import mean_squared_error, r2_score\n",
+    "import statsmodels.api          as sm\n",
+    "import statsmodels.formula.api  as smf\n",
     "\n",
+    "\n",
+    "# Suprimir los warnings específicos\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "pd.set_option('display.max_columns', None)\n",
     "pd.set_option('display.max_rows', None)"
    ]
@@ -66,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "4e53ce2f-8730-47ea-b139-e63b20b00888",
    "metadata": {},
    "outputs": [
@@ -124,30 +166,30 @@
     }
    ],
    "source": [
-    "inicio = datetime.now()\n",
-    "print(f\"Hora inicial: {inicio.strftime('%Y-%m-%d %H:%M:%S')}\")\n",
+    "#inicio = datetime.now()\n",
+    "#print(f\"Hora inicial: {inicio.strftime('%Y-%m-%d %H:%M:%S')}\")\n",
     "\n",
-    "client = Socrata(\"www.datos.gov.co\", None, timeout=60)\n",
-    "DATASET = \"kgxf-xxbe\"\n",
+    "#client = Socrata(\"www.datos.gov.co\", None, timeout=60)\n",
+    "#DATASET = \"kgxf-xxbe\"\n",
     "\n",
-    "limit = 50_000\n",
-    "offset = 0\n",
-    "frames = []\n",
+    "#limit = 50_000\n",
+    "#offset = 0\n",
+    "#frames = []\n",
     "\n",
-    "while True:\n",
-    "    results = client.get(DATASET, limit=limit, offset=offset)\n",
-    "    if not results:\n",
-    "        break\n",
-    "    frames.append(pd.DataFrame.from_records(results))\n",
-    "    offset += limit\n",
+    "#while True:\n",
+    "#    results = client.get(DATASET, limit=limit, offset=offset)\n",
+    "#    if not results:\n",
+    "#        break\n",
+    "#    frames.append(pd.DataFrame.from_records(results))\n",
+    "#    offset += limit\n",
     "\n",
-    "saber11_df = pd.concat(frames, ignore_index=True)\n",
+    "#saber11_df = pd.concat(frames, ignore_index=True)\n",
     "\n",
     "# ----------------------------------------\n",
-    "fin = datetime.now()\n",
-    "print(f\"Hora final:   {fin.strftime('%Y-%m-%d %H:%M:%S')}\")\n",
-    "print(f\"Duración total: {fin - inicio}\")\n",
-    "print(f\"Filas descargadas: {saber11_df.shape[0]:,}\")\n",
+    "#fin = datetime.now()\n",
+    "#print(f\"Hora final:   {fin.strftime('%Y-%m-%d %H:%M:%S')}\")\n",
+    "#print(f\"Duración total: {fin - inicio}\")\n",
+    "#print(f\"Filas descargadas: {saber11_df.shape[0]:,}\")\n",
     "# ----------------------------------------\n"
    ]
   },
@@ -175,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "371ac86b-912a-4b0b-8182-1cbc8e8e03b8",
    "metadata": {
     "scrolled": true
@@ -187,14 +229,14 @@
        "7109704"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#saber11_df = pd.read_parquet(\"saber11_completo.parquet\")\n",
-    "#saber11_df.shape[0]"
+    "saber11_df = pd.read_parquet(\"saber11_completo.parquet\")\n",
+    "saber11_df.shape[0]"
    ]
   },
   {
@@ -210,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "dcdecfb7-994b-4949-bc1a-cf78d557edb6",
    "metadata": {
     "scrolled": true
@@ -302,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "26325d53-3807-4e30-a05b-1ee9681abe00",
    "metadata": {
     "scrolled": true
@@ -701,13 +743,145 @@
        "3                 None        None  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "saber11_df.head(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "30bd4693",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cálculo de la edad del estudiante\n",
+    "\n",
+    "# 1. Convertir la fecha de nacimiento a datetime\n",
+    "saber11_df['estu_fechanacimiento'] = pd.to_datetime(\n",
+    "    saber11_df['estu_fechanacimiento'],\n",
+    "    format='%d/%m/%Y',\n",
+    "    errors='coerce'  # convierte fechas imposibles en NaT\n",
+    ")\n",
+    "\n",
+    "# 2. Separar año y trimestre\n",
+    "saber11_df['anio'] = saber11_df['periodo'].astype(str).str[:4].astype(int)\n",
+    "saber11_df['trimestre'] = saber11_df['periodo'].astype(str).str[-1].astype(int)\n",
+    "\n",
+    "# 3. Mapear trimestre a fecha de corte\n",
+    "mapa_fechas = {1: (3, 31), 2: (6, 30), 3: (9, 30), 4: (12, 31)}\n",
+    "\n",
+    "def calcular_fecha_corte(row):\n",
+    "    mes, dia = mapa_fechas[row['trimestre']]\n",
+    "    return datetime(row['anio'], mes, dia)\n",
+    "\n",
+    "saber11_df['fecha_corte'] = saber11_df.apply(calcular_fecha_corte, axis=1)\n",
+    "\n",
+    "# 4. Calcular edad en años\n",
+    "def calcular_edad(row):\n",
+    "    edad = row['fecha_corte'].year - row['estu_fechanacimiento'].year\n",
+    "    # Restar un año si aún no ha cumplido años en la fecha de corte\n",
+    "    if (row['fecha_corte'].month, row['fecha_corte'].day) < (row['estu_fechanacimiento'].month, row['estu_fechanacimiento'].day):\n",
+    "        edad -= 1\n",
+    "    return edad\n",
+    "\n",
+    "saber11_df['estu_edad_anios'] = saber11_df.apply(calcular_edad, axis=1)\n",
+    "\n",
+    "# 5. Eliminar columnas temporales\n",
+    "saber11_df.drop(columns=['fecha_corte', 'anio', 'trimestre'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "9e5b36ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 7109704 entries, 0 to 7109703\n",
+      "Data columns (total 39 columns):\n",
+      " #   Column                    Dtype  \n",
+      "---  ------                    -----  \n",
+      " 0   periodo                   object \n",
+      " 1   cole_area_ubicacion       object \n",
+      " 2   cole_bilingue             object \n",
+      " 3   cole_calendario           object \n",
+      " 4   cole_caracter             object \n",
+      " 5   cole_codigo_icfes         object \n",
+      " 6   cole_depto_ubicacion      object \n",
+      " 7   cole_genero               object \n",
+      " 8   cole_jornada              object \n",
+      " 9   cole_mcpio_ubicacion      object \n",
+      " 10  cole_naturaleza           object \n",
+      " 11  cole_sede_principal       object \n",
+      " 12  estu_depto_presentacion   object \n",
+      " 13  estu_depto_reside         object \n",
+      " 14  estu_estadoinvestigacion  object \n",
+      " 15  estu_estudiante           object \n",
+      " 16  estu_genero               object \n",
+      " 17  estu_mcpio_presentacion   object \n",
+      " 18  estu_mcpio_reside         object \n",
+      " 19  estu_nacionalidad         object \n",
+      " 20  estu_pais_reside          object \n",
+      " 21  estu_privado_libertad     object \n",
+      " 22  fami_cuartoshogar         object \n",
+      " 23  fami_educacionmadre       object \n",
+      " 24  fami_educacionpadre       object \n",
+      " 25  fami_estratovivienda      object \n",
+      " 26  fami_personashogar        object \n",
+      " 27  fami_tieneautomovil       object \n",
+      " 28  fami_tienecomputador      object \n",
+      " 29  fami_tieneinternet        object \n",
+      " 30  fami_tienelavadora        object \n",
+      " 31  desemp_ingles             object \n",
+      " 32  punt_ingles               object \n",
+      " 33  punt_matematicas          object \n",
+      " 34  punt_sociales_ciudadanas  object \n",
+      " 35  punt_c_naturales          object \n",
+      " 36  punt_lectura_critica      object \n",
+      " 37  punt_global               object \n",
+      " 38  estu_edad_anios           float64\n",
+      "dtypes: float64(1), object(38)\n",
+      "memory usage: 2.1+ GB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Quitar columnas que incluyen códigos de estabelcimiento o geografía, que son redundantes\n",
+    "\n",
+    "saber11_df.drop(columns=['estu_tipodocumento', 'estu_consecutivo', 'cole_cod_dane_establecimiento', 'cole_cod_dane_sede', 'cole_cod_depto_ubicacion', 'cole_cod_mcpio_ubicacion', 'cole_nombre_establecimiento', 'cole_nombre_sede', 'estu_cod_depto_presentacion', 'estu_cod_mcpio_presentacion', 'estu_cod_reside_depto', 'estu_cod_reside_mcpio', 'estu_fechanacimiento'], inplace=True)\n",
+    "\n",
+    "saber11_df.info()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2b316ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'msno' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m msno\u001b[38;5;241m.\u001b[39mmatrix(saber11_df)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'msno' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "msno.matrix(saber11_df)"
    ]
   },
   {
