Actualizacion limpieza datos

--- a/pruebas_saber_exploracion_datos modelos.ipynb
+++ b/pruebas_saber_exploracion_datos modelos.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "371ac86b-912a-4b0b-8182-1cbc8e8e03b8",
    "metadata": {
     "scrolled": true
@@ -80,7 +80,7 @@
     }
    ],
    "source": [
-    "saber11_df = pd.read_parquet(\"saber11_completo.parquet\")\n",
+    "saber11_df = pd.read_parquet(\"saber11_limpio.parquet\")\n",
     "saber11_df.shape[0]"
    ]
   },
